objects/Sync_Field__mdt.object
<CustomObject><fields>
        <fullName>SQL_Field__c</fullName>
        <label>SQL Field</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Salesforce_Field__c</fullName>
        <label>Salesforce Field</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Sync_Table__c</fullName>
        <label>Sync Table</label>
        <referenceTo>Sync_Table__mdt</referenceTo>
        <relationshipLabel>Sync Fields</relationshipLabel>
        <relationshipName>Sync_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields><label>Sync Field</label><pluralLabel>Sync Fields</pluralLabel><visibility>Public</visibility></CustomObject>